--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>Hey! I’m Jakub Nowak. I’m a tech enthusiast based in Cracow.</h1>
 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1><Hey! I’m Jakub Nowak. I’m a tech enthusiast based in Cracow./h1>
+</body>
+</html>
