--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta charset="UTF-8">
     <title>My Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
-<body>
-    <h1><Hey! I’m Jakub Nowak. I’m a tech enthusiast based in Cracow./h1>
-</body>
+<html>
+    <h1>
+      Hey! I’m 
+      <span class="accent">
+        Jakub Nowak
+      </span>
+      . A tech enthusiast based in Cracow.
+    </h1>
+
+  <section class="headerButton">
+    <a href="https://github.com/jnowak123" target="_blank">
+      <i class="fab fa-github"></i> Github
+    </a>
+    <a href="https://www.linkedin.com/in/jakub-nowak-927a53215/" target="_blank">
+      <i class="fab fa-linkedin"></i> LinkedIn
+    </a>
+    <a href="files/CV.pdf" target="_blank">
+      <i class="fas fa-file"></i> CV
+    </a>
+  </section>
+
 </html>
