--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 </head>
 <html>
     <h1>
-      Hey! I’m 
-      <span class="accent">
-        Jakub Nowak
-      </span>
-      . A tech enthusiast based in Cracow.
+      Hey! I’m <span class="accent">Jakub Nowak</span>. A tech enthusiast based in Cracow.
     </h1>
 
   <section class="headerButton">
@@ -26,6 +22,16 @@
     <a href="files/CV.pdf" target="_blank">
       <i class="fas fa-file"></i> CV
     </a>
+  </section>
+  
+  <section class="paragraph">
+    <h2 class="accent">Education</h2>
+    <hr>
+    <p>
+      <b>Bachelors Degree in Computer Science,</b>
+      <i>Jagiellonian University</i> <br>
+      Expecting to graduate June 2026.
+    </p>
   </section>
 
 </html>
