--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My Page</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <meta charset="UTF-8">
+  <title>My Page</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
-<html>
-    <h1>
-      Hey! I’m <span class="accent">Jakub Nowak</span>. A tech enthusiast based in Cracow.
-    </h1>
+
+<body>
+
+  <h1>
+    Hey! I’m <span class="accent">Jakub Nowak</span>. A tech enthusiast based in Cracow.
+  </h1>
 
   <section class="headerButton">
     <a href="https://github.com/jnowak123" target="_blank">
@@ -24,14 +26,25 @@
     </a>
   </section>
   
-  <section class="paragraph">
-    <h2 class="accent">Education</h2>
-    <hr>
+  <details>
+    <summary class="accent">Education</summary>
     <p>
-      <b>Bachelors Degree in Computer Science,</b>
+      <b>Bachelor’s Degree in Computer Science,</b>
       <i>Jagiellonian University</i> <br>
       Expecting to graduate June 2026.
     </p>
-  </section>
+  </details>
 
+  <details>
+    <summary class="accent">Professional Experience</summary>
+  </details>
+
+  <details>
+    <summary class="accent">Community Outreach</summary>
+  </details>
+
+  <details>
+    <summary class="accent">About Me</summary>
+  </details>
+</body>
 </html>
