Added fade to dropdown

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>My Page</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 </head>
 
 <body>
@@ -26,13 +27,28 @@
     </a>
   </section>
   
+
   <details>
     <summary class="accent">Education</summary>
     <p>
       <b>Bachelor’s Degree in Computer Science,</b>
-      <i>Jagiellonian University</i> <br>
-      Expecting to graduate June 2026.
+      <span class="right">
+        Jagiellonian University <br>
+        2023 - June 2026
+      </span><br><br>
+      Key coursework:
     </p>
+
+    <div class="coursework">
+      <span>Mathematical Analysis</span>
+      <span>Algebra</span>
+      <span>Discrete Mathematics</span>
+      <span>Algorithms</span>
+      <span>Databases</span>
+      <span>Operating Systems</span>
+      <span>Computer Networks</span>
+      <span>Software Engineering</span>
+    </div>
   </details>
 
   <details>
