Added sticky footer

--- a/index.html
+++ b/index.html
@@ -1,66 +1,69 @@
-
-<!DOCTYPE html>
-<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>My Page</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 </head>
 
 <body>
+  <main>
+    <h1>
+      Hey! I’m <span class="accent">Jakub Nowak</span>. A tech enthusiast based in Cracow.
+    </h1>
 
-  <h1>
-    Hey! I’m <span class="accent">Jakub Nowak</span>. A tech enthusiast based in Cracow.
-  </h1>
-
-  <section class="headerButton">
-    <a href="https://github.com/jnowak123" target="_blank">
-      <i class="fab fa-github"></i> Github
-    </a>
-    <a href="https://www.linkedin.com/in/jakub-nowak-927a53215/" target="_blank">
-      <i class="fab fa-linkedin"></i> LinkedIn
-    </a>
-    <a href="files/CV.pdf" target="_blank">
-      <i class="fas fa-file"></i> CV
-    </a>
-  </section>
+    <section class="headerButton">
+      <a href="https://github.com/jnowak123" target="_blank">
+        <i class="fab fa-github"></i> Github
+      </a>
+      <a href="https://www.linkedin.com/in/jakub-nowak-927a53215/" target="_blank">
+        <i class="fab fa-linkedin"></i> LinkedIn
+      </a>
+      <a href="files/CV.pdf" target="_blank">
+        <i class="fas fa-file"></i> CV
+      </a>
+    </section>
   
 
-  <details>
-    <summary class="accent">Education</summary>
-    <p>
-      <b>Bachelor’s Degree in Computer Science,</b>
-      <span class="right">
-        Jagiellonian University <br>
-        2023 - June 2026
-      </span><br><br>
-      Key coursework:
-    </p>
+    <details>
+      <summary class="accent">Education</summary>
+      <p>
+        <b>Bachelor’s Degree in Computer Science,</b>
+        <span class="right">
+          Jagiellonian University <br>
+          2023 - June 2026
+        </span><br><br>
+        Key coursework:
+      </p>
 
-    <div class="coursework">
-      <span>Mathematical Analysis</span>
-      <span>Algebra</span>
-      <span>Discrete Mathematics</span>
-      <span>Algorithms</span>
-      <span>Databases</span>
-      <span>Operating Systems</span>
-      <span>Computer Networks</span>
-      <span>Software Engineering</span>
-    </div>
-  </details>
+      <div class="coursework">
+        <span>Mathematical Analysis</span>
+        <span>Algebra</span>
+        <span>Discrete Mathematics</span>
+        <span>Algorithms</span>
+        <span>Databases</span>
+        <span>Operating Systems</span>
+        <span>Computer Networks</span>
+        <span>Software Engineering</span>
+      </div>
+    </details>
 
-  <details>
-    <summary class="accent">Professional Experience</summary>
-  </details>
+    <details>
+      <summary class="accent">Professional Experience</summary>
+    </details>
 
-  <details>
-    <summary class="accent">Community Outreach</summary>
-  </details>
+    <details>
+      <summary class="accent">Community Outreach</summary>
+    </details>
 
-  <details>
-    <summary class="accent">About Me</summary>
-  </details>
+    <details>
+      <summary class="accent">About Me</summary>
+    </details>
+  </main>
+
+  <footer>
+  </footer>
+
 </body>
+
 </html>
