Added work experience

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
 
     <details>
       <summary class="accent">Professional Experience</summary>
+      <p>
+        <b>Coding & Math Expert, QA, Country Launcher</b>
+        <span class="right">
+          Outlier <br>
+          2024 - Present
+        </span><br>
+        <ul>
+          <li> Labeled and validated data for training large-scale AI models used by <b>Meta, Google</b>, and other partners. </li>
+          <li> Performed <b>quality assurance</b> on outputs from a team of <b>100+ contributors</b>, ensuring accuracy and consistency across datasets. </li>
+          <li>Co-led the <b>recruitment and onboarding of ~100 students</b> across Poland, refining internal <b>AI-driven candidate selection tools</b> to improve matching efficiency</li>
+        </ul>
+      </p>
     </details>
 
     <details>
@@ -62,6 +74,7 @@
   </main>
 
   <footer>
+    Made with <span class="accent">♥</span> in Cracow, Poland 2025
   </footer>
 
 </body>
