Added Experience and Outreach

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>My Page</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Lato">
 </head>
 
 <body>
@@ -55,17 +55,53 @@
         <span class="right">
           Outlier <br>
           2024 - Present
-        </span><br>
+        </span><br> <br>
         <ul>
           <li> Labeled and validated data for training large-scale AI models used by <b>Meta, Google</b>, and other partners. </li>
           <li> Performed <b>quality assurance</b> on outputs from a team of <b>100+ contributors</b>, ensuring accuracy and consistency across datasets. </li>
           <li>Co-led the <b>recruitment and onboarding of ~100 students</b> across Poland, refining internal <b>AI-driven candidate selection tools</b> to improve matching efficiency</li>
         </ul>
+        <br>
+        <b>Data Analyst</b>
+        <span class="right">
+          Fundacja Odtworzeniowa Dziedzictwa Narodowego <br> 
+          2024
+        </span> <br> <br>
+        <ul>
+          <li><b>Processed and analyzed</b> datasets from Poland's National Register of Immovable Monuments.</li>
+          <li><b>Developed Python tools</b> leveraging the Mapbox API to geocode addresses, categorize historical structures, and identify duplicate records via spatial proximity analysis.</li>
+          <li><b>Documented data workflows</b> and ensured compliance with data usage policies and licensing terms.</li>
+         </ul>
       </p>
+
     </details>
 
     <details>
       <summary class="accent">Community Outreach</summary>
+        <p>
+          <b>Academic Community Coordinator</b>
+          <span class="right">
+            DDA Beczka<br>
+            2023 - Present
+          </span> <br><br>
+          <ul>
+            <li>Led a group of 100+ individuals, organizing meetings, events, and activities.</li>
+            <li>Coordinated communication efforts, including writing and distributing a weekly newsletter reaching the entire community.</li>
+            <li>Served as group leader during a week-long pilgrimage, coordinating 30 volunteers within a 150-person group covering ~100 km.</li>
+            <li>Co-organized "Ciacho za Ciacho", a charity event that raised over 196,000 zł.</li>
+          </ul>
+          <br>
+          <b>Assistant Scout Leader</b>
+          <span class="right">
+            Scouts Of Europe <br>
+            2020 - 2023
+          </span> <br><br>
+          <ul>
+            <li>Led and mentored a scout group, organizing activities, outdoor adventures, and community service projects.</li>
+            <li>Created and maintained the group’s website using WordPress.</li>
+            <li>Ensured safety and fostered teamwork among scouts.</li>
+          </ul>
+        </p>
     </details>
 
     <details>
